--- a/samples/fifo2/ChangeLog
+++ b/samples/fifo2/ChangeLog
@@ -1,3 +1,6 @@
 Oct 10, 1999
  - standardized indentation of source files
  - FF2 prefix added to Generator and Sink modules
+Oct 12, 1999
+ - ACPFifo and ACBFifo renamed to FF2PacketFifo and FF2BitFifo
+ - display strings moved to NED file
