--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -202,3 +202,7 @@ Aug 30, 1999
 Sept 20, 1999
  - typo fixed in Makefile.in: $(CLFAGS) --> $(CFLAGS)
 ------ omnetpp-2.0b2 released ------
+Dec 4,1999
+  - compiled with MSVC. Minor changes: changed int to bool in some places.
+    envir.dsp added. NOTE: one has to rename all .cc files  to .cpp
+    for compiling (ren *.cc *.cpp)!
