--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -693,6 +693,6 @@ Nov 9,1999
     the source is made fully const-correct, hopefully in the near future.
 Dec 4,1999
   - compiled with MSVC. Minor changes: changed int to bool, struct to class
-    in some places. sim_std.dsw added. NOTE: one has to rename all .cc files
+    in some places. sim_std.dsp added. NOTE: one has to rename all .cc files
     to .cpp for compiling (ren *.cc *.cpp)!
 
