--- a/src/gned/TODO
+++ b/src/gned/TODO
@@ -55,11 +55,14 @@ General:
 - speed up data structure, get rid of "foreach i [array names ned ...]" statements...
 
 Dialogs:
-- do remaining dialogs
+- merge "Drawing options" dialogs into properties
+- remove "doc comments" from tables, and replace with "..." button
+- replace param type, gate dir, etc entries with combo boxes
 - check data entered in dialogs (nonempty, legal chars, unique etc.)
-- reorganize 'general' page of submod dialog
-- process comments
-- put 'compare with module type definition' button in submod dialog pages
+- process comments (add newlines, etc.)
+- process imports: strip/add quotes -- maybe quotes should be stripped/added
+  during parsing/NED generation??
+- check all dialogs if everything works
 
 Longer-term plans:
 - consistency checks (params, gates etc.)
