--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -695,4 +695,6 @@ Dec 4,1999
   - compiled with MSVC. Minor changes: changed int to bool, struct to class
     in some places. sim_std.dsp added. NOTE: one has to rename all .cc files
     to .cpp for compiling (ren *.cc *.cpp)!
-
+Dec 18,1999
+  - renamed isA() to className() in cObject and derived classes. Compatibility
+    #define added to defs.h
