--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -102,3 +102,5 @@ Dec 4,1999
   - compiled with MSVC. cmdenv.dsp added. NOTE: one has to rename all .cc files
     to .cpp for compiling (ren *.cc *.cpp)!
   - To Do: check heap.cc
+Dec 5,1999
+  - Makefile.vc added
