--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -206,3 +206,5 @@ Dec 4,1999
   - compiled with MSVC. Minor changes: changed int to bool in some places.
     envir.dsp added. NOTE: one has to rename all .cc files  to .cpp
     for compiling (ren *.cc *.cpp)!
+Dec 5,1999
+  - Makefile.vc added
