*** empty log message ***

--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -233,4 +233,5 @@ Dec 5,1999
   - Makefile.vc added
 Dec 18, 1999
   - changed isA() to className() in generated code (see sim/ChangeLog)
-
+  - macro names in module interface declarations (Interface...End) changed to
+    reduce chance of name clashes
