--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -711,11 +711,13 @@ Dec 19,1999
        setLongValue(..), setBoolValue(..), etc., and the type character was
        deleted from their arg list. This was done to be consistent with the
        getter functions which already had the names stringValue(), longValue()
-       etc., and to make client code more readable by eliminating
-       "magic constants" (the type characters).
+       etc., and to make client code more readable by eliminating "magic
+       constants" (the type characters). This shouldn't affect much existing
+       code, most users prefer assignment operator to these functions.
     o  redirection handling functions were changed to: setRedirection(cPar*),
        isRedirected(), cPar* redirection(), cancelRedirection(). This results
-       in more readable client code.
+       in more readable client code. These functions are hardly used in any
+       user code.
     o  the number of constructors was reduced to 3 by deleting the ones which
        set an initial long,string,etc. value. Prior to this cPar had
        16 constructors which made subclassing very cumbersome. Functionality
@@ -732,3 +734,16 @@ Dec 19,1999
     o  conversons to/from bool were not fully supported
  - convenience function hasPar(char*) added to cMessage
  - convenience functions hasPar(char*) and hasGate(char*,int) added to cModule
+ - cQueue and cLinkedList interfaces changed:
+     insertHead(a) --> insert(a)  (the name was misleading: cQueue can act as
+       priority queue and inserted elements aren't necessarily put at the head)
+     peekTail()    --> tail()
+     peekHead()    --> head()     (shorter names are preferred)
+     get(a)        --> remove(a)  (the "get" word was misleading as it didn't
+       imply that the element is actually removed from the queue)
+     getTail()     --> pop()      ("get was misleading, see above;
+       "pop" is used in other libs such as STL or Java for this operation)
+     getHead() removed            (it can be expressed as q.remove(q.head()))
+   Compatibility #defines added to defs.h for insertHead(a), peekTail(),
+   peekHead(), getTail().
+
