--- a/samples/dyna/README
+++ b/samples/dyna/README
@@ -6,10 +6,10 @@ Models a client-server application.
 Demonstrates:
  - dynamic module creation
  - using WATCH()
- - star topology with the number of modules as parameters
+ - star topology (with the number of modules passed as parameters)
 
 Dyna is a model of a simple client-server network. The network contains
-serveral clients and one server, connected in star topology:
+several clients and one server, connected in star topology:
 
    client  <--->
    client  <--->  switch  <--->  server
