*** empty log message ***

--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -237,3 +237,8 @@ Dec 18, 1999
     reduce chance of name clashes
 Dec 19, 1999
   - changes in generated code due to cPar interface change (see sim/ChangeLog)
+Jan 4, 2000
+  - corrected '*new cPar = (char *)something' lines in the generated code to
+    '*new cPar() = (char *)something', because in the first case, the
+    cPar(char *) constructor was called (wrongly) instead of cPar() and
+    operator=(char *).
