--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -746,4 +746,15 @@ Dec 19,1999
      getHead() removed            (it can be expressed as q.remove(q.head()))
    Compatibility #defines added to defs.h for insertHead(a), peekTail(),
    peekHead(), getTail().
-
+Jan 4,2000
+ - cPar::setStringValue() now accepts NULL (and treats it as "")
+ - cPar caveat discovered: beware of constructs like
+      cPar p = "foo";
+   It does NOT compile as you would expect!!! It doesn't compile to
+   cPar p;p="foo";, but rather to cPar p("foo")! That is, "foo" becomes the
+   object's NAME instead of its value. This is one of the quirks of C++...
+   The solution it to use explicit parens to denote the constructor call:
+      cPar p() = "foo";
+   This is a hint that it might be ALWAYS a good idea to write empty parens
+   in constructor calls (like 'new cMessage()' instead of 'new cMessage') to
+   avoid such surprises. Java does that too.
