--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,30 @@
 Further plans...
 ~~~~~~~~~~~~~~~~
-Aug 25, 1998, somewhat updated in Aug 1999
+Aug 25 1998, somewhat updated in Aug 1999 and Jan 2000
+
+
+better MSVC support
+~~~~~~~~~~~~~~~~~~~
+replace the coroutine library with Win32 fibers
+support making DLLs
+wizard interface to create OMNeT++ projects and add .ned files to projects
+makemake should support creating MSVC makefiles (is this needed???)
+
+
+distribute binaries for NT
+~~~~~~~~~~~~~~~~~~~~~~~~~~
+demo executable with all samples and Tkenv (with InstallShield)
+libraries & utils compiled with MSVC (with InstallShield)
+
+
+move towards XML
+~~~~~~~~~~~~~~~~
+release NED's XML binding (preliminary DTD already exists)
+find or write suitable DOM library (for parser, use expat)
+move GNED's and NEDC's internal data structure to DOM
+this would enable:
+ - easier presentation, importing/exporting of NED files via XML
+ - building a model directly from NED or XML, without nedc compilation 
 
 
 improve the simulation core
