*** empty log message ***

--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -212,3 +212,5 @@ Jan 9,2000
   - bugfix: TOmnetApp's destructor made virtual
 Jan 15,2000
   - MSDOS #defines removed from the code (omnetapp.cc)
+Jan 16,2000
+  - improvements in cinifile.cc
