--- a/README
+++ b/README
@@ -1,7 +1,22 @@
-Go to the doc/ subdirectory...
-  --> cd doc/
 
-What you'll find there: README, installation instructions, license,
-manuals in Word format, etc. (manuals in HTML are in the html/ subdir).
+OMNeT++
+=======
+
+   is a feature-rich C++-based object-oriented discrete event simulation
+framework, primarily targeted at the simulation of communication networks
+other parallel/distributed systems. OMNeT++ includes a graphical network
+editor, a network topology description language, a rich simulation class
+library, multiple execution environments (both GUI and command line),
+result plotting tool, good documentation, sample simulations and
+much more...
+And it is OPEN SOURCE!
+
+Please look into the doc/ subdirectory where you'll find: README files,
+installation instructions, license, the manual in PDF, etc. The manual
+in HTML is in the html/ subdirectory.
+
+Enjoy!
+
+Andras
 
 
