--omnetpp-2.0b3 released-- line added to ChangeLog by omnetpp/_tag

--- a/samples/fddi/ChangeLog
+++ b/samples/fddi/ChangeLog
@@ -199,3 +199,4 @@ Dec 23, 1999
   - minor cosmetics changes
 Jan 25, 2000
   - ssm_ifs.cc updated because of cArray interface change
+------ omnetpp-2.0b3 released ------
