--- a/samples/fifo1/ChangeLog
+++ b/samples/fifo1/ChangeLog
@@ -10,3 +10,4 @@ Oct 17, 1999
    all sample simulations into a single executable)
 Jan 18, 2000
  - added explicit cast to math expressions with cPar...
+------ omnetpp-2.0b3 released ------
