--- a/samples/pvmex/ChangeLog
+++ b/samples/pvmex/ChangeLog
@@ -2,3 +2,4 @@ Oct 10, 1999
  - standardized indentation of source files
 Jan 18, 2000
  - added explicit cast to math expressions with cPar...
+------ omnetpp-2.0b3 released ------
