--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -214,3 +214,4 @@ Jan 16,2000
   - improvements in cinifile.cc
 Jan 28,2000
  -  main stack size increased to 128K (omnetapp.cc)
+------ omnetpp-2.0b3 released ------
